--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -7,7 +7,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
   font-size: 40px;
   font-family: "vazir"
 }
@@ -50,6 +49,7 @@ input[type=checkbox] {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  min-width: 200px
 }
 
 .panel-item {
@@ -123,13 +123,39 @@ input[type=checkbox] {
   border-bottom: 3px solid black;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-aspect-ratio: 3/4) {
   .container {
     flex-direction: column;
+    scale: 0.8;
   }
 
   .panel {
     flex-direction: row-reverse;
     justify-content: space-evenly;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .container {
+    scale: 0.7;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+    scale: 0.5;
+  }
+}
+
+@media only screen and (max-height: 800px) {
+  .container {
+    scale: 0.7;
+  }
+}
+
+
+@media only screen and (max-height: 500px) {
+  .container {
+    scale: 0.5;
   }
 }
