--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -8,7 +8,15 @@ body {
   margin: 0;
   padding: 0;
   font-size: 40px;
-  font-family: "vazir"
+  font-family: "vazir";
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: grey;
 }
 
 h1 {
@@ -27,6 +35,7 @@ button {
   background-color: #1976d2;
   color: white;
   cursor: pointer;
+  width: 100%;
 }
 
 input[type=checkbox] {
@@ -123,10 +132,22 @@ input[type=checkbox] {
   border-bottom: 3px solid black;
 }
 
-@media only screen and (max-aspect-ratio: 3/4) {
+@media screen and (min-aspect-ratio: 4/3) and (max-height: 900px) {
+  .container {
+    scale: 0.6;
+  }
+}
+
+@media screen and (min-aspect-ratio: 4/3) and (max-height: 500px) {
+  .container {
+    scale: 0.3;
+  }
+}
+
+@media screen and (max-aspect-ratio: 4/3) and (max-width: 1000px) {
   .container {
     flex-direction: column;
-    scale: 0.8;
+    scale: 0.6;
   }
 
   .panel {
@@ -135,27 +156,14 @@ input[type=checkbox] {
   }
 }
 
-@media only screen and (max-width: 1200px) {
+@media screen and (max-aspect-ratio: 4/3) and (max-width: 600px) {
   .container {
-    scale: 0.7;
+    flex-direction: column;
+    scale: 0.3;
   }
-}
 
-@media only screen and (max-width: 700px) {
-  .container {
-    scale: 0.5;
-  }
-}
-
-@media only screen and (max-height: 800px) {
-  .container {
-    scale: 0.7;
-  }
-}
-
-
-@media only screen and (max-height: 500px) {
-  .container {
-    scale: 0.5;
+  .panel {
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
   }
 }
